Switch to java 17 and records